# DiscordSearchScraper

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Justfile  README.md  jsonl-to-csv.py  pyproject.toml  scraper.py
tests/: __init__.py  conftest.py  test_discord_searcher.py  test_snowflake_utils.py
